--- a/.github/workflows/madinadates.yml
+++ b/.github/workflows/madinadates.yml
@@ -15,7 +15,7 @@ jobs:
       
       
     - name: Installing NodeJS
-      uses: actions/steup-node@v2-beta
+      uses: actions/setup-node@v1.4.2
       with:
         node-version: 12
       
