--- a/.github/workflows/madinadates.yml
+++ b/.github/workflows/madinadates.yml
@@ -23,6 +23,6 @@ jobs:
       run: npm install --global surge
       
     - name: deploying using surge
-      run:  madinadates/deploy-surge@v1.0.1 --token $ {{ secrects.MADINA_DATETOKEN }}
+      run:  madinadates.surge.sh/deploy-surge@v1.0.1 --token $ {{ secrects.MADINA_DATETOKEN }}
     
     
