--- a/.github/workflows/madinadates.yml
+++ b/.github/workflows/madinadates.yml
@@ -18,6 +18,5 @@ jobs:
     - name: Installing surge 
       run: npm install --global surge      
     - name: deploying using surge
-      run: surge ./ madinadates.surge.sh --token ${{ secrects.MADINA_DATETOKEN }}
-    
+      run: surge ./ madinadates.surge.sh --token ${{ secrects.MADINA }} 
     
