--- a/.github/workflows/madinadates.yml
+++ b/.github/workflows/madinadates.yml
@@ -18,5 +18,5 @@ jobs:
     - name: Installing surge 
       run: npm install --global surge      
     - name: deploying using surge
-    - run: surge ./ ${{ secrets.madinadates.surge.sh }} --token ${{ secrets.MADINA }}
+    - run: surge ./ ${{ secrets.madinadates.surge.sh }} --token ${{ secrets.madina }}
     
